--- a/Compiler42/Compiler42.csproj
+++ b/Compiler42/Compiler42.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="OpenTK.GLControl" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
