ファイル存在確認

--- a/Compiler42/Compiler42.csproj
+++ b/Compiler42/Compiler42.csproj
@@ -16,4 +16,10 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Texture\404Texture_1024.dds">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
